# instagram_clone

./: pyproject.toml
api/: admin.py  models.py  seriailzers.py  urls.py  views.py
api/migrations/: 0001_initial.py
instagram/: settings.py  urls.py
